Re-establish chat after going offline and back online PART 3 of 3

Final part of bug 270725: An existing chat window/tab stops working when going offline and back online. When
user goes offline, the chat is invalidated. If the user comes back online, and the previous chat window is
still open, the chat with that contact is re-established.

BUG: 270725
REVIEW: 101260
Reviewed by: David Edmundson